# AutoFlow

./: .gitignore  AutoFlow.spec  CHANGELOG.md  Cargo.toml  README.md  overlay_native.py  player.py  recorder.py  requirements.txt  server.py
_legacy/: api.py  main.py
dev/: test_element.py
src/: embedded.rs  export.rs  hud.rs  main.rs  player.rs  recorder.rs  server.rs  state.rs  tray.rs  ws.rs
static/: app.js  guide.html  index.html  overlay.html  style.css  ws.js
