[package]
name = "autoflow"
version = "1.0.0"
edition = "2021"
default-run = "autoflow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Async runtime + HTTP
tokio            = { version = "1", features = ["full"] }
axum             = { version = "0.7", features = ["ws", "macros"] }
tower-http       = { version = "0.5", features = ["fs", "cors"] }
tower            = "0.4"
futures-util     = "0.3"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Image encoding (screenshots → JPEG/base64)
image            = { version = "0.25", default-features = false, features = ["jpeg"] }
base64           = "0.22"

# Tray icon + menu
tray-icon        = "0.17"
muda             = "0.15"

# Utilities
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }
zip              = "2"
once_cell        = "1"
parking_lot      = "0.12"
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open             = "5"

# Windows APIs (Win32 + COM + UIA)
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Memory",
  "Win32_System_DataExchange",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dxgi",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_Networking_WinSock",
] }

rust-embed = { version = "8", features = ["include-exclude"] }
